Fix: Remove header gap on all views

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,12 @@ body {
   min-height: 100vh;
 }
 
+main#main {
+  margin: 0;
+  padding: 0;
+  display: block;
+}
+
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
 All colors MUST be HSL.
 */
